fix in ltr; removed spacing correction for chrome

--- a/static/css/hebrew2018-09-27.css
+++ b/static/css/hebrew2018-09-27.css
@@ -330,6 +330,7 @@ span.vref, span.vrefi {
     font-family: Verdana, Arial, sans-serif;
     font-size: small;
     text-align: right;
+    unicode-bidi: embed;
     direction: ltr;
 }
 span.vref {
@@ -340,6 +341,7 @@ span.vreft {
     font-size: small;
     text-align: right;
     float: left;
+    unicode-bidi: embed;
     direction: ltr;
 }
 a.crossref,.nt_cmt a {
@@ -715,6 +717,7 @@ tr.nt_cmt td {
 div.nt_main_ctrl {
     font-family: Verdana, Arial, sans-serif;
     text-align: left;
+    unicode-bidi: embed;
     direction: ltr;
 }
 .nt_loaded {
